--- a/home.html
+++ b/home.html
@@ -1,9 +1,10 @@
-s.,fsd,fnsd,nf,sdfn<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>My webiste</title>
 </head>
 <body><h2>
+<<a href="mailto:joe@example.com?subject=feedback" "email me">email me</a>
 <a href="Home.html">Home</a>
 <a href="details.html">Details</a>
 <a href="aboutme.html">About me</a></h2></br>
